# sellermate-ai

./: .gitignore  BETA_NOTES.md  CHANGELOG.md  COMMERCE_OS_PROGRESS_REPORT.md  COMMERCE_OS_ROADMAP.md  FEEDBACK_TEMPLATE.md  FINAL_COMMERCE_OS_AUDIT.md  FINAL_FIX_VERIFICATION.md  PREMIUM_UX_SPRINT_REPORT.md  README.md  REAL_PRODUCT_UI_REPORT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TESTER_MESSAGE.md  TESTING_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .env.example  .env.production.example  ARCHITECTURE_AUDIT.md  AUTH_QA_REPORT.md  CUSTOMER_QA_REPORT.md  CUsersWALTONsellermateappsapiANALYTICS_QA_REPORT.md  CUsersWALTONsellermateappsapiORDER_QA_REPORT.md  CUsersWALTONsellermateappsapiappaistrategic_agents__init__.py  CUsersWALTONsellermateappsapiappaistrategic_agentsfraud_sentinel.py  CUsersWALTONsellermateappsapiappaistrategic_agentstrust_graph.py  CUsersWALTONsellermateappsapiapproutersstrategic.py  CUsersWALTONsellermateappsapiappschemasstrategic.py  CUsersWALTONsellermateappsapiappservicesstrategic_service.py  DEMO_GUIDE.md  Dockerfile  FINAL_MVP_READINESS_REPORT.md  HERMIT_AGENT_REPORT.md  INFRA_FIX_REPORT.md  INVENTORY_QA_REPORT.md  MERCHANT_QA_REPORT.md  PACKAGE_AI_ENGINE_REPORT.md  PRODUCT_QA_REPORT.md  QUICK_START.md  README.md  STRATEGIC_AGENT_REPORT.md  alembic.ini  check_db.py  check_seed.py  pyproject.toml  qa_customer.py  qa_hermit.py  qa_inventory.py  qa_orders.py  qa_product.py  qa_regression_auth.py  qa_regression_merchant.py  seed_demo_data.py  setup_test_db.py  trigger_agents.py
apps/api/alembic/: env.py
apps/api/app/: config.py  database.py  (+3 more)
(+259 files in other folders)
