[tool.poetry]
name = "sellermate-api"
version = "0.1.0"
description = "SellerMate AI — Backend API"
authors = ["SellerMate Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.6" }
uvicorn = { extras = ["standard"], version = "^0.32.1" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
redis = { extras = ["hiredis"], version = "^5.2.1" }
bcrypt = "^4.2.1"
PyJWT = { extras = ["crypto"], version = "^2.10.1" }
python-multipart = "^0.0.20"
boto3 = "^1.35.76"
httpx = "^0.28.1"
langchain = "^0.3.10"
langchain-anthropic = "^0.3.0"
langgraph = "^0.2.55"
anthropic = "^0.40.0"
google-genai = ">=1.0.0"
greenlet = "^3.1.1"
rapidfuzz = ">=3.0.0"
numpy = ">=1.26.0"
scikit-learn = ">=1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
ruff = "^0.8.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
